--- a/frontend/src/components/LandingPage.css
+++ b/frontend/src/components/LandingPage.css
@@ -247,7 +247,7 @@ body {
 
 .books-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 40px;
 }
 
@@ -265,8 +265,8 @@ body {
 }
 
 .book-image {
-  width: 100%;
-  height: 350px;
+  width: 250px;
+  height: 400px;
   margin-bottom: 20px;
   border-radius: 12px;
   overflow: hidden;
@@ -358,8 +358,8 @@ body {
 }
 
 .book-image-small {
-  width: 100%;
-  height: 250px;
+  width: 350px;
+  height: 350px;
   overflow: hidden;
 }
 
